test/expected/cli/shitbox_usage.out
--- builtin getopts with no arguments ---
shit: 1:1: error: getopts: Not enough arguments.
     1 |  getopts
       |  ^~~~~~~ here.
shit: note: Try `getopts --help` for more info.
rc=2
--- builtin let with no expression ---
shit: 1:1: error: Builtin `let`: expression expected.
     1 |  let
       |  ^~~ here.
rc=1
--- calc with no expression ---
shit: 1:1: error: calc has no expression to evaluate.
     1 |  shitbox calc
       |  ^~~~~~~~~~~~ here.
note: Pass an expression such as `calc '2 + 2'`, read a pipe with `-p`, or enter the interactive prompt with `-i`.
rc=1
--- shitbox cp with one operand ---
shit: 1:1: error: cp: Not enough arguments.
     1 |  shitbox cp onlyone
       |  ^~~~~~~~~~~~~~~~~~ here.
shit: note: Try `cp --help` for more info.
rc=2
--- shitbox grep with no pattern ---
shit: 1:1: error: grep: Not enough arguments.
     1 |  shitbox grep
       |  ^~~~~~~~~~~~ here.
shit: note: Try `grep --help` for more info.
rc=2
--- the note is located in the bash mood too ---
shit: 1:1: error: mkdir: Not enough arguments.
     1 |  shitbox mkdir
       |  ^~~~~~~~~~~~~ here.
shit: note: Try `mkdir --help` for more info.
rc=2
--- and in the sh mood ---
shit: 1:1: error: mkdir: Not enough arguments.
     1 |  shitbox mkdir
       |  ^~~~~~~~~~~~~ here.
shit: note: Try `mkdir --help` for more info.
rc=2
